--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-   
     "eject": "react-scripts eject",
     "build": "babel src -d lib",
     "test": "jest"
